Add basic cover controller
